[package]
name = "gtasksprint"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
crossterm = "0.28.1"
directories = "5.0.1"
google-tasks1 = "6.0.0"
hyper-rustls = "0.27.5"
hyper-util = "0.1.10"
rustls = "0.23.20"
serde = "1.0.217"
serde_json = "1.0.134"
termsize = "0.1.9"
textwrap = "0.16.1"
tokio = { version = "1.42.0", features = ["full"] }
toml = "0.8.19"
yup-oauth2 = "11.0.0"
